# Transportable-causal-perturbation-engine-with-sequence-semantics

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  REAL MAIN - Transportable Causal Perturbation Engine with Sequence Semantics.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml
configs/env/: azure.yaml  kaggle.yaml  local.yaml
scripts/: bootstrap.ps1  bootstrap.sh  check.ps1  check.sh  cloud_artifact_sync.py  phase18_cloud_execute.py
src/tcpe/: __init__.py  __main__.py  anndata_schema.py  baselines.py  causal.py  cell_embedding.py  cli.py  cloud_execution.py  cloud_handoff.py  config.py  context_shift.py  dataset_loaders.py  evaluation.py  ingestion.py  local_validation.py  pipeline.py  preprocessing.py  sequence_embedding.py  sequence_windows.py  synthetic_data.py  transport.py  types.py
src/tcpe/runtime/: __init__.py  (+3 more)
tests/: test_imports.py  test_phase10_transport_ot.py  test_phase11_transport_scaffolds.py  test_phase12_causal_module.py  test_phase13_context_shift_splits.py  test_phase14_evaluator_model_card.py  test_phase15_pipeline_orchestrator.py  test_phase16_local_validation_ladder.py  test_phase17_cloud_handoff.py  test_phase18_cloud_execution.py  test_phase2_cli_config.py  test_phase3_anndata_schema.py  test_phase4_synthetic_data.py  test_phase5_dataset_loaders.py  test_phase6_preprocessing.py  test_phase7_sequence_windows.py  test_phase8_embedding_providers.py  test_phase9_baselines.py  test_seed_determinism.py  test_wandb_scaffold.py
